--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@300&display=swap" rel="stylesheet"> -->
     <script src="p5.js"></script>
-    <script src="p5.sound.min.js"></script>
+    <!-- <script src="p5.sound.min.js"></script> -->
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
 <script defer src="p5.collide2d"></script>
